--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -140,7 +139,35 @@ cython_debug/
 # code-editor
 .vscode
 
+
+
+# from frontend
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 node-modules
 
-# custom
-delete.html
+
+# from backend
+
+
+node_modules/
+package-lock.json
