--- a/.gitignore
+++ b/.gitignore
@@ -139,8 +139,6 @@ cython_debug/
 # code-editor
 .vscode
 
-
-
 # from frontend
 /node_modules
 /.pnp
@@ -167,7 +165,10 @@ node-modules
 
 
 # from backend
-
-
 node_modules/
 package-lock.json
+
+
+# custom
+
+dump.sql
